--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
 </head>
 <body>
-  <h1>WebSockets App</h1>
+  <div id="mario-chat">
+    <div id="chat-window">
+      <div id="output">
+        <!-- chat msg  -->
+      </div>
+      <div id="feedback"></div>
+    </div>
+    <input type="text" id="handle" placeholder="Handle">
+    <input type="text" id="message" placeholder="Message">
+    <button id="send">Send</button>
+  </div>
   <script src="/chat.js"></script>
 </body>
 </html>
